--- a/.github/workflows/wait_for_user_input.yml
+++ b/.github/workflows/wait_for_user_input.yml
@@ -1,11 +1,25 @@
+name: Custom Workflow
+
 on: 
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Define env name'     
+        description: 'Define env name'
         required: true
         default: 'prod'
       branch:
-        description: 'Define branch name'     
+        description: 'Define branch name'
         required: true
         default: 'master'
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      
+      - name: Print environment and branch names
+        run: |
+          echo "Environment: ${{ github.event.inputs.environment }}"
+          echo "Branch: ${{ github.event.inputs.branch }}"
